<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:background="@drawable/cof_bg"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"

            android:fontFamily="@font/berkshire_swash"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="35sp" />


        <TextView
            android:id="@+id/txtvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:textColor="@color/black"
            android:textStyle="bold"

            android:textSize="35sp" />



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/drink"
            android:textSize="35sp" />



        <TextView
            android:id="@+id/txtvDrink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="35sp" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:text="@string/additives_label"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="35sp" />


        <TextView
            android:id="@+id/txtvDrinkType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="35sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:text="Добавки:"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="35sp" />



        <TextView
            android:id="@+id/txtvAdditives"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="35sp" />

    </LinearLayout>

</ScrollView>